@@ -87,35 +87,56 @@
 
 <build>
 <finalName>ROOT</finalName>
-<plugins>
+<plugin>
+<artifactId>maven-clean-plugin</artifactId>
+<version>3.1.0</version>
+</plugin>
+<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
+<plugin>
+<artifactId>maven-resources-plugin</artifactId>
+<version>3.0.2</version>
+</plugin>
+
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-site-plugin</artifactId>
-<version>3.9.1</version>
+<artifactId>maven-compiler-plugin</artifactId>
+<version>3.8.0</version>
 </plugin>
-<!-- Maven War Plugin -->
 
-
-<!-- Maven Surefire Plugin -->
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-surefire-plugin</artifactId>
-<version>3.0.0-M5</version>
-<configuration>
-<argLine>--enable-preview</argLine>
-</configuration>
+<version>2.22.1</version>
 </plugin>
 <plugin>
 <artifactId>maven-war-plugin</artifactId>
 <version>3.2.2</version>
 </plugin>
-<!-- JaCoCo Maven Plugin -->
 <plugin>
+<artifactId>maven-install-plugin</artifactId>
+<version>2.5.2</version>
+</plugin>
+<plugin>
+<artifactId>maven-deploy-plugin</artifactId>
+<version>2.8.2</version>
+</plugin>
+
+ 
+
+        <plugin>
+<artifactId>maven-war-plugin</artifactId>
+<version>3.2.2</version>
+</plugin>
+
+ 
+
+                  <plugin>
 <groupId>org.jacoco</groupId>
 <artifactId>jacoco-maven-plugin</artifactId>
-<version>0.8.10</version>
+<version>0.8.7</version>
 <executions>
 <execution>
+<id>prepare-agent</id>
 <goals>
 <goal>prepare-agent</goal>
 </goals>
